# KruskalDB

./: .gitignore  CMakeLists.txt
include/cache/: cache_manager.hpp
include/core/: edge.hpp  node.hpp  property.hpp
include/storage/: btree.hpp  indexing_engine.hpp  storage.hpp  storage_engine.hpp
src/: CMakeLists.txt
src/cache/: cache_manager.cpp
src/core/: edge.cpp  node.cpp  property.cpp
src/storage/: btree.cpp  indexing_engine.cpp  storage_engine.cpp
tests/: CMakeLists.txt  main.cpp
tests/core/: test_edge.cpp  test_node.cpp
tests/storage/: test_btree.cpp
